Single Container Changes 3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
       # Upgrade AWS CLI to the latest version
       - pip install --upgrade --force-reinstall "botocore>1.21.30" "boto3>1.18.30" "awscli>1.20.30"
+      - pip install --upgrade xgboost==1.7.1
 
   build:
     commands:
