--- a/staging-config.json
+++ b/staging-config.json
@@ -2,8 +2,8 @@
   "Parameters": {
     "StageName": "staging",
     "EndpointInstanceCount": "1",
-    "EndpointInstanceType": "ml.m5.large",
+    "EndpointInstanceType": "ml.c6g.xlarge",
     "SamplingPercentage": "0",
-    "EnableDataCapture": "true"
+    "EnableDataCapture": "false"
   }
 }
