Instance change to m5.large

--- a/staging-config.json
+++ b/staging-config.json
@@ -1,8 +1,8 @@
 {
   "Parameters": {
     "StageName": "staging",
-    "EndpointInstanceCount": "2",
-    "EndpointInstanceType": "ml.c5.xlarge",
+    "EndpointInstanceCount": "1",
+    "EndpointInstanceType": "ml.m5.large",
     "EnableDataCapture": "false",
     "SamplingPercentage":"0"
   }
